// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`click option 1`] = `
<div class="r-dropdown-menu">
  <div class="r-dropdown-menu__bar r-dropdown-menu__bar--opened">
    <div id="r-dropdown-menu-0"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title">
        <div class="r-ellipsis">
          A
        </div>
      </span>
    </div>
    <div id="r-dropdown-menu-1"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title">
        <div class="r-ellipsis">
          A
        </div>
      </span>
    </div>
  </div>
  <div style="top: 100px;"
       class="r-dropdown-item r-dropdown-item--down"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
      <div style="z-index: 2007; position: absolute; animation-duration: 0.2s; display: none;"
           class="r-overlay"
      >
      </div>
    </transition-stub>
    <transition-stub name="r-popup-slide-top"
                     appear="false"
                     persisted="false"
                     css="true"
    >
      <div style="z-index: 2007; transition-duration: 0.2s; display: none;"
           role="menu"
           tabindex="0"
           class="r-popup r-popup--top r-dropdown-item__content"
           aria-labelledby="r-dropdown-menu-0"
      >
        <div class="r-cell r-cell--clickable r-dropdown-item__option r-dropdown-item__option--active"
             role="menuitem"
             tabindex="0"
        >
          <div class="r-cell__title">
            <span>
              A
            </span>
          </div>
          <div class="r-cell__value">
            <i class="r-badge__wrapper r-icon r-dropdown-item__icon">
            </i>
          </div>
        </div>
        <div class="r-cell r-cell--clickable r-dropdown-item__option"
             role="menuitem"
             tabindex="-1"
        >
          <div class="r-cell__title">
            <span>
              B
            </span>
          </div>
          <div class="r-cell__value">
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div style="top: 100px; display: none;"
       class="r-dropdown-item r-dropdown-item--down"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
    </transition-stub>
    <transition-stub name="r-popup-slide-top"
                     appear="false"
                     persisted="false"
                     css="true"
    >
    </transition-stub>
  </div>
</div>
`;

exports[`close-on-click-outside 1`] = `
<div class="r-dropdown-menu">
  <div class="r-dropdown-menu__bar r-dropdown-menu__bar--opened">
    <div id="r-dropdown-menu-0"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title">
        <div class="r-ellipsis">
          A
        </div>
      </span>
    </div>
    <div id="r-dropdown-menu-1"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title">
        <div class="r-ellipsis">
          A
        </div>
      </span>
    </div>
  </div>
  <div style="top: 100px;"
       class="r-dropdown-item r-dropdown-item--down"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
      <div style="z-index: 2004; position: absolute; animation-duration: 0.2s; display: none;"
           class="r-overlay"
      >
      </div>
    </transition-stub>
    <transition-stub name="r-popup-slide-top"
                     appear="false"
                     persisted="false"
                     css="true"
    >
      <div style="z-index: 2004; transition-duration: 0.2s; display: none;"
           role="menu"
           tabindex="0"
           class="r-popup r-popup--top r-dropdown-item__content"
           aria-labelledby="r-dropdown-menu-0"
      >
        <div class="r-cell r-cell--clickable r-dropdown-item__option r-dropdown-item__option--active"
             role="menuitem"
             tabindex="0"
        >
          <div class="r-cell__title">
            <span>
              A
            </span>
          </div>
          <div class="r-cell__value">
            <i class="r-badge__wrapper r-icon r-dropdown-item__icon">
            </i>
          </div>
        </div>
        <div class="r-cell r-cell--clickable r-dropdown-item__option"
             role="menuitem"
             tabindex="-1"
        >
          <div class="r-cell__title">
            <span>
              B
            </span>
          </div>
          <div class="r-cell__value">
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div style="top: 100px; display: none;"
       class="r-dropdown-item r-dropdown-item--down"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
    </transition-stub>
    <transition-stub name="r-popup-slide-top"
                     appear="false"
                     persisted="false"
                     css="true"
    >
    </transition-stub>
  </div>
</div>
`;

exports[`destroy one item 1`] = `
<div class="r-dropdown-menu">
  <div class="r-dropdown-menu__bar">
    <div id="r-dropdown-menu-0"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title">
        <div class="r-ellipsis">
          A
        </div>
      </span>
    </div>
  </div>
  <div style="top: 0px; display: none;"
       class="r-dropdown-item r-dropdown-item--down"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
    </transition-stub>
    <transition-stub name="r-popup-slide-top"
                     appear="false"
                     persisted="false"
                     css="true"
    >
    </transition-stub>
  </div>
</div>
`;

exports[`direction up 1`] = `
<div class="r-dropdown-menu">
  <div class="r-dropdown-menu__bar">
    <div id="r-dropdown-menu-0"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title r-dropdown-menu__title--down">
        <div class="r-ellipsis">
          A
        </div>
      </span>
    </div>
    <div id="r-dropdown-menu-1"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title r-dropdown-menu__title--down">
        <div class="r-ellipsis">
          A
        </div>
      </span>
    </div>
  </div>
  <div style="bottom: 0px; display: none;"
       class="r-dropdown-item r-dropdown-item--up"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
    </transition-stub>
    <transition-stub name="r-popup-slide-bottom"
                     appear="false"
                     persisted="false"
                     css="true"
    >
    </transition-stub>
  </div>
  <div style="bottom: 0px; display: none;"
       class="r-dropdown-item r-dropdown-item--up"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
    </transition-stub>
    <transition-stub name="r-popup-slide-bottom"
                     appear="false"
                     persisted="false"
                     css="true"
    >
    </transition-stub>
  </div>
</div>
`;

exports[`direction up 2`] = `
<div class="r-dropdown-menu">
  <div class="r-dropdown-menu__bar r-dropdown-menu__bar--opened">
    <div id="r-dropdown-menu-0"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title r-dropdown-menu__title--active">
        <div class="r-ellipsis">
          A
        </div>
      </span>
    </div>
    <div id="r-dropdown-menu-1"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title r-dropdown-menu__title--down">
        <div class="r-ellipsis">
          A
        </div>
      </span>
    </div>
  </div>
  <div style="bottom: 768px;"
       class="r-dropdown-item r-dropdown-item--up"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
      <div style="z-index: 2006; position: absolute; animation-duration: 0.2s;"
           class="r-overlay"
      >
      </div>
    </transition-stub>
    <transition-stub name="r-popup-slide-bottom"
                     appear="false"
                     persisted="false"
                     css="true"
    >
      <div style="z-index: 2006; transition-duration: 0.2s;"
           role="menu"
           tabindex="0"
           class="r-popup r-popup--bottom r-dropdown-item__content"
           aria-labelledby="r-dropdown-menu-0"
      >
        <div class="r-cell r-cell--clickable r-dropdown-item__option r-dropdown-item__option--active"
             role="menuitem"
             tabindex="0"
        >
          <div class="r-cell__title">
            <span>
              A
            </span>
          </div>
          <div class="r-cell__value">
            <i class="r-badge__wrapper r-icon r-dropdown-item__icon">
            </i>
          </div>
        </div>
        <div class="r-cell r-cell--clickable r-dropdown-item__option"
             role="menuitem"
             tabindex="-1"
        >
          <div class="r-cell__title">
            <span>
              B
            </span>
          </div>
          <div class="r-cell__value">
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div style="bottom: 768px; display: none;"
       class="r-dropdown-item r-dropdown-item--up"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
    </transition-stub>
    <transition-stub name="r-popup-slide-bottom"
                     appear="false"
                     persisted="false"
                     css="true"
    >
    </transition-stub>
  </div>
</div>
`;

exports[`disable close-on-click-outside 1`] = `
<div class="r-dropdown-menu">
  <div class="r-dropdown-menu__bar r-dropdown-menu__bar--opened">
    <div id="r-dropdown-menu-0"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title r-dropdown-menu__title--down r-dropdown-menu__title--active">
        <div class="r-ellipsis">
          A
        </div>
      </span>
    </div>
    <div id="r-dropdown-menu-1"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title">
        <div class="r-ellipsis">
          A
        </div>
      </span>
    </div>
  </div>
  <div style="top: 100px;"
       class="r-dropdown-item r-dropdown-item--down"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
      <div style="z-index: 2005; position: absolute; animation-duration: 0.2s;"
           class="r-overlay"
      >
      </div>
    </transition-stub>
    <transition-stub name="r-popup-slide-top"
                     appear="false"
                     persisted="false"
                     css="true"
    >
      <div style="z-index: 2005; transition-duration: 0.2s;"
           role="menu"
           tabindex="0"
           class="r-popup r-popup--top r-dropdown-item__content"
           aria-labelledby="r-dropdown-menu-0"
      >
        <div class="r-cell r-cell--clickable r-dropdown-item__option r-dropdown-item__option--active"
             role="menuitem"
             tabindex="0"
        >
          <div class="r-cell__title">
            <span>
              A
            </span>
          </div>
          <div class="r-cell__value">
            <i class="r-badge__wrapper r-icon r-dropdown-item__icon">
            </i>
          </div>
        </div>
        <div class="r-cell r-cell--clickable r-dropdown-item__option"
             role="menuitem"
             tabindex="-1"
        >
          <div class="r-cell__title">
            <span>
              B
            </span>
          </div>
          <div class="r-cell__value">
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div style="top: 100px; display: none;"
       class="r-dropdown-item r-dropdown-item--down"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
    </transition-stub>
    <transition-stub name="r-popup-slide-top"
                     appear="false"
                     persisted="false"
                     css="true"
    >
    </transition-stub>
  </div>
</div>
`;

exports[`disable dropdown item 1`] = `
<div class="r-dropdown-menu">
  <div class="r-dropdown-menu__bar">
    <div id="r-dropdown-menu-0"
         role="button"
         class="r-dropdown-menu__item r-dropdown-menu__item--disabled"
    >
      <span class="r-dropdown-menu__title">
        <div class="r-ellipsis">
          A
        </div>
      </span>
    </div>
  </div>
  <div style="top: 0px; display: none;"
       class="r-dropdown-item r-dropdown-item--down"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
    </transition-stub>
    <transition-stub name="r-popup-slide-top"
                     appear="false"
                     persisted="false"
                     css="true"
    >
    </transition-stub>
  </div>
</div>
`;

exports[`render option icon 1`] = `
<div class="r-dropdown-menu">
  <div class="r-dropdown-menu__bar r-dropdown-menu__bar--opened">
    <div id="r-dropdown-menu-0"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title r-dropdown-menu__title--down r-dropdown-menu__title--active">
        <div class="r-ellipsis">
          A
        </div>
      </span>
    </div>
    <div id="r-dropdown-menu-1"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title">
        <div class="r-ellipsis">
          A
        </div>
      </span>
    </div>
  </div>
  <div style="top: 100px;"
       class="r-dropdown-item r-dropdown-item--down"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
      <div style="z-index: 2003; position: absolute; animation-duration: 0.2s;"
           class="r-overlay"
      >
      </div>
    </transition-stub>
    <transition-stub name="r-popup-slide-top"
                     appear="false"
                     persisted="false"
                     css="true"
    >
      <div style="z-index: 2003; transition-duration: 0.2s;"
           role="menu"
           tabindex="0"
           class="r-popup r-popup--top r-dropdown-item__content"
           aria-labelledby="r-dropdown-menu-0"
      >
        <div class="r-cell r-cell--clickable r-dropdown-item__option r-dropdown-item__option--active"
             role="menuitem"
             tabindex="0"
        >
          <i class="r-badge__wrapper r-icon r-cell__left-icon">
          </i>
          <div class="r-cell__title">
            <span>
              A
            </span>
          </div>
          <div class="r-cell__value">
            <i class="r-badge__wrapper r-icon r-dropdown-item__icon">
            </i>
          </div>
        </div>
        <div class="r-cell r-cell--clickable r-dropdown-item__option"
             role="menuitem"
             tabindex="-1"
        >
          <i class="r-badge__wrapper r-icon r-cell__left-icon">
          </i>
          <div class="r-cell__title">
            <span>
              B
            </span>
          </div>
          <div class="r-cell__value">
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div style="top: 100px; display: none;"
       class="r-dropdown-item r-dropdown-item--down"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
    </transition-stub>
    <transition-stub name="r-popup-slide-top"
                     appear="false"
                     persisted="false"
                     css="true"
    >
    </transition-stub>
  </div>
</div>
`;

exports[`show dropdown item 1`] = `
<div class="r-dropdown-menu">
  <div class="r-dropdown-menu__bar r-dropdown-menu__bar--opened">
    <div id="r-dropdown-menu-0"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title r-dropdown-menu__title--down r-dropdown-menu__title--active">
        <div class="r-ellipsis">
          A
        </div>
      </span>
    </div>
    <div id="r-dropdown-menu-1"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title">
        <div class="r-ellipsis">
          A
        </div>
      </span>
    </div>
  </div>
  <div style="top: 100px;"
       class="r-dropdown-item r-dropdown-item--down"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
      <div style="z-index: 2001; position: absolute; animation-duration: 0.2s;"
           class="r-overlay"
      >
      </div>
    </transition-stub>
    <transition-stub name="r-popup-slide-top"
                     appear="false"
                     persisted="false"
                     css="true"
    >
      <div style="z-index: 2001; transition-duration: 0.2s;"
           role="menu"
           tabindex="0"
           class="r-popup r-popup--top r-dropdown-item__content"
           aria-labelledby="r-dropdown-menu-0"
      >
        <div class="r-cell r-cell--clickable r-dropdown-item__option r-dropdown-item__option--active"
             role="menuitem"
             tabindex="0"
        >
          <div class="r-cell__title">
            <span>
              A
            </span>
          </div>
          <div class="r-cell__value">
            <i class="r-badge__wrapper r-icon r-dropdown-item__icon">
            </i>
          </div>
        </div>
        <div class="r-cell r-cell--clickable r-dropdown-item__option"
             role="menuitem"
             tabindex="-1"
        >
          <div class="r-cell__title">
            <span>
              B
            </span>
          </div>
          <div class="r-cell__value">
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div style="top: 100px; display: none;"
       class="r-dropdown-item r-dropdown-item--down"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
    </transition-stub>
    <transition-stub name="r-popup-slide-top"
                     appear="false"
                     persisted="false"
                     css="true"
    >
    </transition-stub>
  </div>
</div>
`;

exports[`show dropdown item 2`] = `
<div class="r-dropdown-menu">
  <div class="r-dropdown-menu__bar r-dropdown-menu__bar--opened">
    <div id="r-dropdown-menu-0"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title">
        <div class="r-ellipsis">
          A
        </div>
      </span>
    </div>
    <div id="r-dropdown-menu-1"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title r-dropdown-menu__title--down r-dropdown-menu__title--active">
        <div class="r-ellipsis">
          A
        </div>
      </span>
    </div>
  </div>
  <div style="top: 100px;"
       class="r-dropdown-item r-dropdown-item--down"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
      <div style="z-index: 2001; position: absolute; animation-duration: 0s; display: none;"
           class="r-overlay"
      >
      </div>
    </transition-stub>
    <transition-stub name="r-popup-slide-top"
                     appear="false"
                     persisted="false"
                     css="true"
    >
      <div style="z-index: 2001; transition-duration: 0s; display: none;"
           role="menu"
           tabindex="0"
           class="r-popup r-popup--top r-dropdown-item__content"
           aria-labelledby="r-dropdown-menu-0"
      >
        <div class="r-cell r-cell--clickable r-dropdown-item__option r-dropdown-item__option--active"
             role="menuitem"
             tabindex="0"
        >
          <div class="r-cell__title">
            <span>
              A
            </span>
          </div>
          <div class="r-cell__value">
            <i class="r-badge__wrapper r-icon r-dropdown-item__icon">
            </i>
          </div>
        </div>
        <div class="r-cell r-cell--clickable r-dropdown-item__option"
             role="menuitem"
             tabindex="-1"
        >
          <div class="r-cell__title">
            <span>
              B
            </span>
          </div>
          <div class="r-cell__value">
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div style="top: 100px;"
       class="r-dropdown-item r-dropdown-item--down"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
      <div style="z-index: 2002; position: absolute; animation-duration: 0.2s;"
           class="r-overlay"
      >
      </div>
    </transition-stub>
    <transition-stub name="r-popup-slide-top"
                     appear="false"
                     persisted="false"
                     css="true"
    >
      <div style="z-index: 2002; transition-duration: 0.2s;"
           role="menu"
           tabindex="0"
           class="r-popup r-popup--top r-dropdown-item__content"
           aria-labelledby="r-dropdown-menu-1"
      >
        <div class="r-cell r-cell--clickable r-dropdown-item__option r-dropdown-item__option--active"
             role="menuitem"
             tabindex="0"
        >
          <div class="r-cell__title">
            <span>
              A
            </span>
          </div>
          <div class="r-cell__value">
            <i class="r-badge__wrapper r-icon r-dropdown-item__icon">
            </i>
          </div>
        </div>
        <div class="r-cell r-cell--clickable r-dropdown-item__option"
             role="menuitem"
             tabindex="-1"
        >
          <div class="r-cell__title">
            <span>
              B
            </span>
          </div>
          <div class="r-cell__value">
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`show dropdown item 3`] = `
<div class="r-dropdown-menu">
  <div class="r-dropdown-menu__bar r-dropdown-menu__bar--opened">
    <div id="r-dropdown-menu-0"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title">
        <div class="r-ellipsis">
          A
        </div>
      </span>
    </div>
    <div id="r-dropdown-menu-1"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title">
        <div class="r-ellipsis">
          A
        </div>
      </span>
    </div>
  </div>
  <div style="top: 100px;"
       class="r-dropdown-item r-dropdown-item--down"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
      <div style="z-index: 2001; position: absolute; animation-duration: 0s; display: none;"
           class="r-overlay"
      >
      </div>
    </transition-stub>
    <transition-stub name="r-popup-slide-top"
                     appear="false"
                     persisted="false"
                     css="true"
    >
      <div style="z-index: 2001; transition-duration: 0s; display: none;"
           role="menu"
           tabindex="0"
           class="r-popup r-popup--top r-dropdown-item__content"
           aria-labelledby="r-dropdown-menu-0"
      >
        <div class="r-cell r-cell--clickable r-dropdown-item__option r-dropdown-item__option--active"
             role="menuitem"
             tabindex="0"
        >
          <div class="r-cell__title">
            <span>
              A
            </span>
          </div>
          <div class="r-cell__value">
            <i class="r-badge__wrapper r-icon r-dropdown-item__icon">
            </i>
          </div>
        </div>
        <div class="r-cell r-cell--clickable r-dropdown-item__option"
             role="menuitem"
             tabindex="-1"
        >
          <div class="r-cell__title">
            <span>
              B
            </span>
          </div>
          <div class="r-cell__value">
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div style="top: 100px;"
       class="r-dropdown-item r-dropdown-item--down"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
      <div style="z-index: 2002; position: absolute; animation-duration: 0.2s; display: none;"
           class="r-overlay"
      >
      </div>
    </transition-stub>
    <transition-stub name="r-popup-slide-top"
                     appear="false"
                     persisted="false"
                     css="true"
    >
      <div style="z-index: 2002; transition-duration: 0.2s; display: none;"
           role="menu"
           tabindex="0"
           class="r-popup r-popup--top r-dropdown-item__content"
           aria-labelledby="r-dropdown-menu-1"
      >
        <div class="r-cell r-cell--clickable r-dropdown-item__option r-dropdown-item__option--active"
             role="menuitem"
             tabindex="0"
        >
          <div class="r-cell__title">
            <span>
              A
            </span>
          </div>
          <div class="r-cell__value">
            <i class="r-badge__wrapper r-icon r-dropdown-item__icon">
            </i>
          </div>
        </div>
        <div class="r-cell r-cell--clickable r-dropdown-item__option"
             role="menuitem"
             tabindex="-1"
        >
          <div class="r-cell__title">
            <span>
              B
            </span>
          </div>
          <div class="r-cell__value">
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`title prop 1`] = `
<div class="r-dropdown-menu">
  <div class="r-dropdown-menu__bar">
    <div id="r-dropdown-menu-0"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title">
        <div class="r-ellipsis">
          Title
        </div>
      </span>
    </div>
    <div id="r-dropdown-menu-1"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title">
        <div class="r-ellipsis">
          Title
        </div>
      </span>
    </div>
  </div>
  <div style="top: 0px; display: none;"
       class="r-dropdown-item r-dropdown-item--down"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
    </transition-stub>
    <transition-stub name="r-popup-slide-top"
                     appear="false"
                     persisted="false"
                     css="true"
    >
    </transition-stub>
  </div>
  <div style="top: 0px; display: none;"
       class="r-dropdown-item r-dropdown-item--down"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
    </transition-stub>
    <transition-stub name="r-popup-slide-top"
                     appear="false"
                     persisted="false"
                     css="true"
    >
    </transition-stub>
  </div>
</div>
`;

exports[`title slot 1`] = `
<div class="r-dropdown-menu">
  <div class="r-dropdown-menu__bar">
    <div id="r-dropdown-menu-0"
         role="button"
         tabindex="0"
         class="r-dropdown-menu__item r-haptics-feedback"
    >
      <span class="r-dropdown-menu__title">
        <div class="r-ellipsis">
          Custom Title
        </div>
      </span>
    </div>
  </div>
  <div style="top: 0px; display: none;"
       class="r-dropdown-item r-dropdown-item--down"
  >
    <transition-stub name="r-fade"
                     appear="true"
                     persisted="false"
                     css="true"
                     role="button"
                     tabindex="0"
    >
    </transition-stub>
    <transition-stub name="r-popup-slide-top"
                     appear="false"
                     persisted="false"
                     css="true"
    >
    </transition-stub>
  </div>
</div>
`;
